--- a/src/components/SelectedTags.astro
+++ b/src/components/SelectedTags.astro
@@ -16,7 +16,7 @@ const TAGS = [
     {
       TAGS.map(tag => (
         <a
-          class="bg-accent hover:bg-accent-dark flex items-center justify-center rounded p-6 text-center text-white shadow-md transition-all"
+          class="flex items-center justify-center rounded bg-accent p-6 text-center text-white shadow-md transition-all hover:bg-accent-dark"
           href={`/tags/${tag.to}`}
         >
           <span class="font-sans text-xl">{tag.label}</span>
