--- a/src/pages/snippets/index.astro
+++ b/src/pages/snippets/index.astro
@@ -27,7 +27,7 @@ const HEADINGS = ['Name', 'Description', 'Category']
         class="block border-collapse md:table md:border-4 md:border-gray-100 dark:md:border-gray-800"
       >
         <thead
-          class="hidden bg-gray-100 md:table-header-group dark:bg-gray-800"
+          class="hidden bg-gray-100 dark:bg-gray-800 md:table-header-group"
         >
           <tr class="block md:table-row">
             {
