--- a/src/components/RecentPosts.astro
+++ b/src/components/RecentPosts.astro
@@ -24,7 +24,7 @@ const latest10 = postsByDate.slice(0, 10)
     </ol>
 
     <div
-      class="mt-8 flex flex-col gap-4 rounded bg-gray-100 p-8 dark:bg-gray-800"
+      class="mt-8 flex flex-col gap-4 rounded bg-gray-100 p-8 shadow-md dark:bg-gray-800"
     >
       <div class="font-sans text-2xl">Looking for more posts?</div>
 
