--- a/src/layouts/Standard.astro
+++ b/src/layouts/Standard.astro
@@ -25,7 +25,7 @@ const { description, keywords, title } = Astro.props
 ---
 
 <html
-  class="h-full font-serif text-[85%] xs:text-[100%] lg:text-[115%]"
+  class="h-full font-serif text-[85%] xs:text-[100%] xl:text-[115%]"
   lang="en"
 >
   <head>
@@ -75,7 +75,7 @@ const { description, keywords, title } = Astro.props
   </head>
 
   <body
-    class="relative flex min-h-full flex-col leading-chill dark:bg-gray-900 dark:text-white"
+    class="relative flex min-h-full flex-col leading-chill text-gray-900 dark:bg-gray-900 dark:text-gray-50"
   >
     <div class="flex min-h-full grow flex-col">
       <Header />
