--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,9 +11,17 @@ import Standard from '../layouts/Standard.astro'
   <Content>
     <div class="flex flex-col gap-8">
       <Welcome />
-      <Hr />
+
+      <div class="my-6">
+        <Hr />
+      </div>
+
       <SelectedTags />
-      <Hr />
+
+      <div class="my-6">
+        <Hr />
+      </div>
+
       <RecentPosts />
     </div>
   </Content>
