--- a/src/components/Content.astro
+++ b/src/components/Content.astro
@@ -11,7 +11,7 @@ interface Props {
 const { courseNickname, showCourseAds = true } = Astro.props
 ---
 
-<div class="flex flex-col gap-12 2xl:grid 2xl:grid-cols-2 2xl:gap-24">
+<div class="flex flex-col gap-12 2xl:grid 2xl:grid-cols-[80ch_auto] 2xl:gap-24">
   <main class="">
     <slot />
   </main>
