--- a/src/components/CourseAds.astro
+++ b/src/components/CourseAds.astro
@@ -22,17 +22,17 @@ const { logo, title, url } = course.data
 ---
 
 <div
-  class="flex items-center gap-8 rounded bg-gray-100 p-8 shadow-md dark:bg-gray-800"
+  class="flex items-center gap-8 rounded bg-gray-100 p-8 font-sans shadow-md dark:bg-gray-800 xl:p-12"
 >
   <div class="flex basis-1/3 items-center justify-center">
     <div class="flex flex-col gap-2">
       <img src={logo} alt={`Logo for ${title}`} />
-      <div class="text-center font-sans">{title}</div>
+      <div class="text-center">{title}</div>
     </div>
   </div>
 
   <div class="flex basis-2/3 flex-col gap-8">
-    <div class="font-sans text-2xl">Check out my courses!</div>
+    <div class="text-2xl leading-none">Check out my courses!</div>
 
     <div>
       If you enjoy my posts, you might enjoy my courses, too. Click the button
@@ -45,7 +45,7 @@ const { logo, title, url } = course.data
 
     <div class="flex">
       <a
-        class="rounded bg-accent px-4 py-2 font-sans leading-none text-white shadow-md hover:bg-accent-dark"
+        class="rounded bg-accent px-4 py-2 leading-none text-white shadow-md hover:bg-accent-dark"
         href={url}
         rel="noreferrer"
         target="_blank"
