--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,7 +13,7 @@ const LINKS = [
 ]
 ---
 
-<footer class="mt-24 bg-gray-800 py-8 text-center text-white">
+<footer class="mt-24 bg-gray-900 py-8 text-center text-white dark:bg-gray-800">
   <Container>
     <div class="flex flex-col gap-8">
       <div class="flex justify-center">
