add missing component

--- a/src/pages/snippets/[...slug].astro
+++ b/src/pages/snippets/[...slug].astro
@@ -1,23 +1,24 @@
 ---
 import type { GetStaticPaths } from 'astro'
 import { getCollection, type CollectionEntry } from 'astro:content'
-import Standard from '../../layouts/Standard.astro'
-import Content from '../../components/Content.astro'
-import PageHeading from '../../components/PageHeading.astro'
-import Prose from '../../components/Prose.astro'
-import FinishedReading from '../../components/FinishedReading.astro'
-import Hr from '../../components/Hr.astro'
-import PostAuthor from '../../components/PostAuthor.astro'
-import EditLink from '../../components/EditLink.astro'
-import PostBeardStrokes from '../../components/PostBeardStrokes.astro'
-import Link from '../../components/Link.astro'
 import Blockquote from '../../components/Blockquote.astro'
-import PostH3 from '../../components/PostH3.astro'
-import PostH4 from '../../components/PostH4.astro'
+import Content from '../../components/Content.astro'
+import EditLink from '../../components/EditLink.astro'
 import EggheadEmbed from '../../components/EggheadEmbed.astro'
+import FinishedReading from '../../components/FinishedReading.astro'
 import Gif from '../../components/Gif.astro'
+import Hr from '../../components/Hr.astro'
+import Image from '../../components/Image.astro'
+import Link from '../../components/Link.astro'
 import Marker from '../../components/Marker.astro'
 import OffsetWrap from '../../components/OffsetWrap.astro'
+import PageHeading from '../../components/PageHeading.astro'
+import PostAuthor from '../../components/PostAuthor.astro'
+import PostBeardStrokes from '../../components/PostBeardStrokes.astro'
+import PostH3 from '../../components/PostH3.astro'
+import PostH4 from '../../components/PostH4.astro'
+import Prose from '../../components/Prose.astro'
+import Standard from '../../layouts/Standard.astro'
 import TableSimple from '../../components/TableSimple.astro'
 import YouTubeEmbed from '../../components/YouTubeEmbed.astro'
 
