add description to standard so it gets to meta tags

--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -31,9 +31,10 @@ interface Props {
 }
 
 const props = Astro.props
+const { description, title } = props.entry.data
 ---
 
-<Standard title={`${props.entry.data.title} | Kyle Shevlin`}>
+<Standard description={description} title={`${title} | Kyle Shevlin`}>
   <Content>
     <Post {...props} />
   </Content>
