--- a/src/components/Agathist.astro
+++ b/src/components/Agathist.astro
@@ -1,24 +1,34 @@
+---
+import ShiftBy from './ShiftBy.astro'
+---
+
 <a
-  class="group block rounded bg-slate-900 p-8 text-center text-white dark:bg-slate-800"
+  class="group block rounded border-2 border-pink-500 bg-gray-100 p-4 text-center shadow dark:bg-slate-800"
   href="https://agath.ist"
   rel="noreferrer"
   target="_blank"
 >
-  <div class="flex flex-col gap-4">
-    <span
-      class="text-animation bg-gradient-to-r from-rose-500 via-pink-500 to-orange-400 bg-clip-text font-system text-5xl font-bold leading-tight text-transparent"
-    >
-      Agathist
-    </span>
-
-    <div class="font-serif text-xl">
-      <span>Good software by good people.</span>
-      <span>
-        <span class="transition-all group-hover:text-pink-500">Click here</span>
-        to learn more.</span
+  <ShiftBy y={-6}>
+    <div class="flex flex-col">
+      <div
+        class="text-animation bg-gradient-to-r from-rose-500 via-pink-500 to-orange-400 bg-clip-text font-system text-6xl font-bold leading-snug text-transparent"
       >
+        Agathist
+      </div>
+
+      <div class="font-serif text-lg 2xl:text-xl">
+        <span>Good software by good people.</span>
+      </div>
+
+      <div class="mt-2 font-sans">
+        Visit <span
+          class="underline transition-colors group-hover:text-pink-500"
+          >https://agath.ist</span
+        >
+        to learn more
+      </div>
     </div>
-  </div>
+  </ShiftBy>
 </a>
 
 <style>
