--- a/src/content/posts/type-todo/_tweet.astro
+++ b/src/content/posts/type-todo/_tweet.astro
@@ -1,10 +1,12 @@
 <blockquote class="twitter-tweet">
   <p lang="en" dir="ltr">
     Perhaps my favorite TypeScript tip <a href="https://t.co/SgLAndod3a"
-      >pic.twitter.com/SgLAndod3a</a>
+      >pic.twitter.com/SgLAndod3a</a
+    >
   </p>&mdash; Kyle Shevlin (@kyleshevlin) <a
     href="https://twitter.com/kyleshevlin/status/1749501941535924281?ref_src=twsrc%5Etfw"
-    >January 22, 2024</a>
+    >January 22, 2024</a
+  >
 </blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"
 ></script>
