adjust post markup

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -88,6 +88,10 @@ const { Content: PostContent } = await entry.render()
     </Prose>
   </article>
 
+  <div class="my-8">
+    <hr />
+  </div>
+
   <FinishedReading slug={slug} />
 
   <div class="flex flex-col gap-4">
