--- a/src/components/PostTags.astro
+++ b/src/components/PostTags.astro
@@ -9,13 +9,13 @@ interface Props {
 const { tags } = Astro.props
 ---
 
-<div class="flex items-baseline gap-4 pt-1 font-sans">
+<div class="flex items-center gap-4 pt-1 font-sans">
   <div class="flex items-center gap-2">
-    <span class="text-gray-300">
+    <div class="flex translate-y-[1px] items-center text-gray-400">
       <Tag />
-    </span>
+    </div>
 
-    <span class="text-sm">Tags</span>
+    <div class="text-sm leading-none">Tags</div>
   </div>
 
   <div class="flex flex-wrap gap-4">
