fix edit link on posts

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -66,7 +66,7 @@ const { Content: PostContent } = await entry.render()
           {subtitle && <div class="font-sans font-bold">{subtitle}</div>}
         </div>
 
-        <EditLink filePath={`/posts/published/${entry.id}`} />
+        <EditLink filePath={`/content/posts/${entry.id}`} />
       </div>
 
       <PostContent
