fix edit link on snippets

--- a/src/pages/snippets/[...slug].astro
+++ b/src/pages/snippets/[...slug].astro
@@ -52,7 +52,7 @@ const formattedSlug = `snippets---${entry.slug}`
 
             <div class="flex flex-wrap items-baseline justify-between gap-4">
               <PageHeading>{name}</PageHeading>
-              <EditLink filePath={`/snippets/${entry.id}`} />
+              <EditLink filePath={`/content/snippets/${entry.id}`} />
             </div>
           </div>
 
