--- a/src/components/PostAuthor.astro
+++ b/src/components/PostAuthor.astro
@@ -14,8 +14,8 @@ import Link from './Link.astro'
   <div class="grow-[3] font-sans text-lg">
     <p>
       Kyle Shevlin is the founder &amp; lead software engineer of
-      <Link href="https://agath.ist">Agathist</Link>, a software development
-      firm with a mission to build good software with good people.
+      <Link external href="https://agath.ist">Agathist</Link>, a software
+      development firm with a mission to build good software with good people.
     </p>
   </div>
 </div>
