--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,25 +1,33 @@
 ---
 import Link from './Link.astro'
-import PageHeading from './PageHeading.astro'
 import Prose from './Prose.astro'
 ---
 
 <section>
   <Prose>
-    <PageHeading>Welcome!</PageHeading>
-    <p>
-      Hi, I'm Kyle Shevlin, a software engineer and online instructor. This is
-      where I share all the content I create. I mostly write articles and create
-      courses, focusing on breaking concepts down to their fundamentals.
+    <p class="font-sans text-3xl font-bold">
+      Hi, I'm Kyle Shevlin, founder and lead software engineer of{' '}
+      <Link external href="https://agath.ist">Agathist</Link>, a software
+      development firm that specializes in React and TypeScript projects.
     </p>
     <p>
-      Peruse my blog posts, check out one of my courses (or all of them), and
-      sign up for my newsletter if you like what you read.
+      I am also a writer, speaker and coding instructor. This is my personal
+      site where I share all the content I create.
     </p>
     <p>
-      If you need to reach out to me,{' '}
-      <Link href="mailto:kyle@kyleshevlin.com">email</Link> is the best way to do
-      so.
+      I primarily write articles and create courses, focusing on breaking
+      software concepts down to their fundamentals. Check out one of my posts or
+      courses (or all of them). If you like what you read, then sign up for my
+      newsletter, too.
+    </p>
+    <p>
+      <strong> If you're looking to hire me and my team</strong>, send an email
+      to <Link href="mailto:kyle@agath.ist">kyle@agath.ist</Link>. If you need
+      to reach me regarding something else, then my personal <Link
+        href="mailto:kyle@kyleshevlin.com"
+      >
+        email
+      </Link> is the best way to do so.
     </p>
     <p>Enjoy your time here and thank you.</p>
   </Prose>
