--- a/src/components/FootnoteDisplay.astro
+++ b/src/components/FootnoteDisplay.astro
@@ -4,13 +4,13 @@ import Container from './Container.astro'
 
 <div id="footnote-display" class="fixed bottom-0 left-0 right-0 z-10 hidden">
   <div
-    class="border-t-4 border-t-accent bg-white p-8 shadow-[0px_-4px_6px_1px] shadow-[rgba(0,0,0,0.1)] dark:bg-gray-800"
+    class="border-t-4 border-t-accent bg-white p-8 pb-16 shadow-[0px_-4px_6px_1px] shadow-[rgba(0,0,0,0.1)] dark:bg-gray-800"
   >
     <Container>
       <div class="flex flex-col items-start gap-4">
         <div class="font-sans font-bold">Footnote</div>
 
-        <div id="footnote-display-content"></div>
+        <div class="max-w-[80ch]" id="footnote-display-content"></div>
 
         <button
           id="close-footnote"
