--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -14,7 +14,7 @@ if (external) {
 ---
 
 <a
-  class="text-accent underline hover:bg-accent hover:text-white"
+  class="text-accent underline transition-all hover:bg-accent hover:text-white"
   href={href}
   {...additionalProps}><slot /></a
 >
