--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,7 +8,19 @@ import Prose from './Prose.astro'
     <p class="font-sans text-3xl font-bold">
       Hi, I'm Kyle Shevlin, founder and lead software engineer of{' '}
       <Link external href="https://agath.ist">Agathist</Link>, a software
-      development firm that specializes in React and TypeScript projects.
+      development firm that specializes web &amp; mobile applications built with <Link
+        external
+        href="https://react.dev"
+      >
+        React
+      </Link>, <Link external href="https://reactnative.dev">
+        React Native
+      </Link>, <Link external href="https://astro.build">Astro</Link> and <Link
+        external
+        href="https://typescriptlang.org"
+      >
+        TypeScript
+      </Link>.
     </p>
     <p>
       I am also a writer, speaker and coding instructor. This is my personal
