add bg-white to body to fix bug in twitter browser

--- a/src/layouts/Standard.astro
+++ b/src/layouts/Standard.astro
@@ -77,7 +77,7 @@ const sanitizedTitle = sanitize(title)
   </head>
 
   <body
-    class="relative flex min-h-full flex-col leading-chill text-gray-900 dark:bg-gray-900 dark:text-gray-50"
+    class="relative flex min-h-full flex-col bg-white leading-chill text-gray-900 dark:bg-gray-900 dark:text-gray-50"
   >
     <div class="flex min-h-full grow flex-col">
       <Header />
