--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,7 +8,7 @@ import Prose from './Prose.astro'
     <p class="font-sans text-3xl font-bold">
       Hi, I'm Kyle Shevlin, founder and lead software engineer of{' '}
       <Link external href="https://agath.ist">Agathist</Link>, a software
-      development firm that specializes web &amp; mobile applications built with <Link
+      development firm that specializes in web &amp; mobile applications built with <Link
         external
         href="https://react.dev"
       >
