add impactful resources page

--- a/src/components/CourseAds.astro
+++ b/src/components/CourseAds.astro
@@ -45,7 +45,7 @@ const { logo, title, url } = course.data
 
     <div class="flex">
       <a
-        class="rounded bg-accent px-4 py-2 leading-none text-white shadow-md hover:bg-accent-dark"
+        class="rounded bg-accent px-4 py-2 leading-none text-white shadow-md transition-colors hover:bg-accent-dark"
         href={url}
         rel="noreferrer"
         target="_blank"
