--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -8,6 +8,7 @@ const LINKS = [
   { href: '/courses', title: 'Courses' },
   { href: '/snippets', title: 'Snippets' },
   { href: '/about', title: 'About' },
+  { href: '/impactful-resources', title: 'Impactful Resources' },
 ].map(link => ({
   ...link,
   isCurrentPage: link.href === pathname,
