--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -8,12 +8,11 @@ import Prose from './Prose.astro'
     <p class="font-sans text-3xl font-bold">
       Hi, I'm Kyle Shevlin, founder and lead software engineer of{' '}
       <Link external href="https://agath.ist">Agathist</Link>, a software
-      development firm that specializes in web &amp; mobile applications built with <Link
+      development firm that specializes in web &amp; mobile applications built
+      with <Link external href="https://react.dev">React</Link>, <Link
         external
-        href="https://react.dev"
+        href="https://reactnative.dev"
       >
-        React
-      </Link>, <Link external href="https://reactnative.dev">
         React Native
       </Link>, <Link external href="https://astro.build">Astro</Link> and <Link
         external
