add prefer alphabetized object keys post

--- a/src/components/Gif.astro
+++ b/src/components/Gif.astro
@@ -8,7 +8,7 @@ interface Props {
 const { alt, gifSrc, staticSrc } = Astro.props
 ---
 
-<picture>
+<picture class="flex justify-center">
   {
     staticSrc && (
       <source srcset={staticSrc} media="(prefers-reduced-motion: reduce)" />
