--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -1,27 +1,28 @@
 ---
 import type { CollectionEntry } from 'astro:content'
+import EggheadEmbed from '../components/EggheadEmbed.astro'
+import Gif from '../components/Gif.astro'
+import Marker from '../components/Marker.astro'
+import OffsetWrap from '../components/OffsetWrap.astro'
+import PostH3 from '../components/PostH3.astro'
+import PostH4 from '../components/PostH4.astro'
+import { formatPostDate } from '../utils'
 import Blockquote from './Blockquote.astro'
 import EditLink from './EditLink.astro'
-import EggheadEmbed from '../components/EggheadEmbed.astro'
+import FadeIn from './FadeIn.astro'
 import FinishedReading from './FinishedReading.astro'
-import Gif from '../components/Gif.astro'
 import Hr from './Hr.astro'
 import Image from './Image.astro'
 import Link from './Link.astro'
-import Marker from '../components/Marker.astro'
-import OffsetWrap from '../components/OffsetWrap.astro'
 import PageHeading from './PageHeading.astro'
 import PostAuthor from './PostAuthor.astro'
 import PostBeardStrokes from './PostBeardStrokes.astro'
 import PostPagination from './PostPagination.astro'
-import PostH3 from '../components/PostH3.astro'
-import PostH4 from '../components/PostH4.astro'
 import PostTags from './PostTags.astro'
 import Prose from './Prose.astro'
 import TableSimple from './TableSimple.astro'
 import WorkWithAgathist from './WorkWithAgathist.astro'
 import YouTubeEmbed from './YouTubeEmbed.astro'
-import { formatPostDate } from '../utils'
 
 interface Props {
   entry: CollectionEntry<'posts'>
@@ -80,6 +81,7 @@ const { Content: PostContent } = await entry.render()
           a: Link,
           blockquote: Blockquote,
           EggheadEmbed,
+          FadeIn,
           Gif,
           h3: PostH3,
           h4: PostH4,
