make updates to pattern matching post

--- a/src/components/Post.astro
+++ b/src/components/Post.astro
@@ -14,6 +14,7 @@ import FinishedReading from './FinishedReading.astro'
 import Hr from './Hr.astro'
 import Image from './Image.astro'
 import Link from './Link.astro'
+import Note from './Note.astro'
 import PageHeading from './PageHeading.astro'
 import PostAuthor from './PostAuthor.astro'
 import PostBeardStrokes from './PostBeardStrokes.astro'
@@ -88,6 +89,7 @@ const { Content: PostContent } = await entry.render()
           hr: Hr,
           Image,
           Marker,
+          Note,
           OffsetWrap,
           TableSimple,
           YouTubeEmbed,
