--- a/src/components/Note.astro
+++ b/src/components/Note.astro
@@ -1,6 +1,6 @@
 <div class="flex flex-col gap-2 rounded bg-accent/25 p-6 font-sans shadow-lg">
   <div class="text-lg font-bold">Note</div>
-  <div class="max-w-prose text-base text-gray-700 dark:text-gray-400">
+  <div class="text-base text-gray-700 dark:text-gray-400">
     <slot />
   </div>
 </div>
